tests/negative/gold/interface_cycle2_test.gold
tests/negative/interface_cycle2_test.toit:5:11: error: Cycle in super/interface chain
interface A implements A:
          ^
tests/negative/interface_cycle2_test.toit:5:24: error: This clause contributes to the cycle
interface A implements A:
                       ^
Compilation failed.
